--- a/style.css
+++ b/style.css
@@ -1,16 +1,9 @@
-/* Fuentes*/
-
-
 /* Header */
 
 header {
     position: sticky;
     top: 0;
     z-index: 1;
-}
-
-body{
-    font-family: 'Raleway', sans-serif;
 }
 
 /*Estilos Generales*/
@@ -26,7 +19,6 @@ body{
 
 /* Pagina Inicio */
 
-    /*Presentacion de estudio*/
 
     #presentation{
         padding-top: 2rem;
@@ -37,13 +29,8 @@ body{
         width: 100%;
         height: 100%;
     }
-    /*Carousel*/
-    .cl-imgsize {
-        width: 100%;
-        height: 75%;
-    }
 
-/*Proyectos*/
+/* Proyectos */
 #proyects {
     margin-top: 5rem;
 }
@@ -57,9 +44,7 @@ body{
     text-align: center;
 }
 .proyect {
-    
-    margin: 5rem 6rem;
-    
+    margin: 5rem 6rem; 
 }
 
 /*Servicios*/
@@ -67,31 +52,17 @@ body{
     margin: 2rem 0rem;
 }
 
-#services img {
-
-}
-
-
 /*Nosotros*/
 #about section {
     margin:2rem 0rem;
 }
 
-p{
-    font-size: ;
-}
-
-/*Contacto*/
-label {
-    
-}
-
 #contact-studio article {
     margin: 3rem 0rem;
 }
-/* Footer */
 
-#footer {
+/* Footer */
+footer {
     display: flex;
     align-items: flex-end;
     background-color: rgb(36, 36, 36);
@@ -107,4 +78,3 @@ footer ul {
 footer a{
     color: white;
 }
-
